kubernetes/clusters/home/utils/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: utils

spec:
  selector:
    app: vpn-qbittorrent

  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      protocol: TCP

    - name: bittorrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP

    - name: bittorrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP

  type: ClusterIP
