kubernetes/clusters/home/utils/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: utils

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - qbittorrent.alarlab.dev
    secretName: wildcard-alarlab-tls

  rules:
    - host: qbittorrent.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-service
                port:
                  number: 8080
